add all baseurls

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ layout: default
   {% endif %}
   <span class="page_number ">Page: {{ paginator.page }} of {{ paginator.total_pages }}</span>
   {% if paginator.next_page %}
-    <a href="{{ paginator.next_page_path }}" class="next">&#8594;</a>
+    <a href="{{site.basurl}}{{ paginator.next_page_path }}" class="next">&#8594;</a>
   {% else %}
     <!-- no next -->
   {% endif %}
